--- a/CodeCamp4.html
+++ b/CodeCamp4.html
@@ -20,7 +20,7 @@
             <fieldset>
                 <legend>Account type (required)</legend>
                 <label for="personal-account"><input class="inline" name="personal" id="personal-account" name="account-type" type="radio" checked> Personal</label>
-                <label for="business-account"><input class="inline" id="business-account name="account-type" type="radio"> Business</label>
+                <label for="business-account"><input class="inline" id="business-account" name="account-type" type="radio"> Business</label>
             </fieldset>
             <fieldset>
                 <label for="profile-picture">Upload a profile picture: <input name="picture" id="profile-picture" type="file"></label>
